firmware/build/log/idf_py_stderr_output_59829
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp: In member function 'void McpwmPulseGenerator::profileTaskLoop()':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/mcpwm_pulse_gen.cpp:468:39: error: request for member 'load' in '((McpwmPulseGenerator*)this)->McpwmPulseGenerator::direction_', which is of non-class type 'bool'
  468 |         bool current_dir = direction_.load(std::memory_order_relaxed);
      |                                       ^~~~
make[2]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/mcpwm_pulse_gen.cpp.obj] Error 1
make[1]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/all] Error 2
make: *** [all] Error 2
